added Gabriel's exchange rate calculator

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <img src="img/money.png" alt="" class="money-img">  
-  <h1>Exchange Rate Calculator</h1>  
+  <h1>Gabriel's Exchange Rate Calculator</h1>  
   <script src="script.js"></script> 
   <p>Choose the currency and amount to get the exchange rate</p> 
   
